2010-06-08  Christian Egli  <christian.egli@sbszh.ch>

	* org-taskjuggler.el (org-export-taskjuggler-old-level):
	define local variable to avoid compiler warning.

2010-06-07  Christian Egli  <christian.egli@sbszh.ch>

	* org-exp.el (org-export): Added taskjuggler export to the export
	dispatcher.

2010-06-08  Bastien Guerry  <bzg@altern.org>

	* org-timer.el (org-timer-set-timer): Fix typo in the docstring.

2010-05-28  Bastien Guerry  <bzg@altern.org>

	* org-timer.el (org-timer-set-timer): Use a prefix argument.
	See the docstring of the function.

2010-05-24  Bastien Guerry  <bzg@altern.org>

	* org-timer.el (org-timer-set-timer): Fix bug about cancelling
	timers.

2010-05-22  David Maus  <dmaus@ictsoc.de>

	* org-w3m.el (org-w3m-copy-for-org-mode)
	(org-w3m-get-next-link-start, org-w3m-get-prev-link-start):
	Get text property directly, not using macro `w3m-anchor'.

2010-05-21  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-emph-re): Document the match groups.

2010-05-20  Bernt Hansen <bernt@norang.ca>

	* org-clock.el (org-clock-in): Set `org-clock-clocking-in' to
	t before calling `org-clock-out', so that that function can
	know its call context.

2010-05-20  Bastien Guerry  <bzg@altern.org>

	* org-timer.el (org-timer-default-timer): New variable.
	(org-timer-set-timer): Use the new variable.  Also offer the
	possibility to replace the current timer by a new one.

2010-05-20  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-kill-note-or-show-branches): Hide subtree before
	exposing the headings.

2010-05-19  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-add-planning-info): Remove the empty line also
	if there is no whitespace at all in there.

	* org-table.el (org-table-align): Fix alignment of strings
	with invisible characters.

2010-05-19  David Maus  <dmaus@ictsoc.de>

	* org.el (org-refile-cache-get): Return empty list of targets
	when cache was cleared.